--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
   <!-- Navigation -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-transparent fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><img width="200" height="45" src="LetterHead latest top.png" /></a>
+      <a class="navbar-brand" href="index.html"><img width="200" height="75" src="b3logo.png" /></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -32,43 +32,16 @@
           <li class="nav-item active">
             <a class="nav-link" href="about.html">About</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="services.html">Services</a>
-          </li>          
+             
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Products
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="portfolio-1-col.html">Mats</a>
-              <!-- <a class="dropdown-item" href="portfolio-2-col.html">2 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a> -->
+              <a class="dropdown-item" href="mats.html">Mats</a>             
             </div>
-          </li>
-          <!-- <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Blog
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-              <a class="dropdown-item" href="blog-home-1.html">Blog Home 1</a>
-              <a class="dropdown-item" href="blog-home-2.html">Blog Home 2</a>
-              <a class="dropdown-item" href="blog-post.html">Blog Post</a>
-            </div>
-          </li> -->
-          <!-- <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Other Pages
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-              <a class="dropdown-item" href="full-width.html">Full Width Page</a>
-              <a class="dropdown-item" href="sidebar.html">Sidebar Page</a>
-              <a class="dropdown-item" href="faq.html">FAQ</a>
-              <a class="dropdown-item" href="404.html">404</a>
-              <a class="dropdown-item" href="pricing.html">Pricing Table</a>
-            </div>
-          </li> -->
+          </li>        
+       
           <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
@@ -76,7 +49,7 @@
       </div>
     </div>
   </nav>
-
+  <br/>
   <!-- Page Content -->
   <div class="container">
 
@@ -93,15 +66,29 @@
     </ol>
 
     <!-- Intro Content -->
+    <!-- http://placehold.it/750x450 -->
     <div class="row">
       <div class="col-lg-6">
-        <img class="img-fluid rounded mb-4" src="http://placehold.it/750x450" alt="">
+        <img class="img-fluid rounded mb-4" src="b3logo2.png" alt="">
       </div>
       <div class="col-lg-6">
         <h2>About B3 Exports</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptate nihil eum consectetur similique? Consectetur, quod, incidunt, harum nisi dolores delectus reprehenderit voluptatem perferendis dicta dolorem non blanditiis ex fugiat.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum voluptatum aut sequi impedit non velit ab ea pariatur sint quidem corporis eveniet. Odit, temporibus reprehenderit dolorum!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
+        <p>
+          An export company which exports goods produced in India are shipped to another country for 
+          future sale or trade. Exports are a essential component of a country’s economy, 
+          as the sale of such goods adds to the producing nation's gross output. 
+          B3 exports want to take part in the economic growth of our country.
+        </p>
+        <p>
+          We B3 Exports engaged in exporting Mats which made of a special kind of grass called 
+          "Korai". The Korai Mat weaving craft is a customary skill of the people in southern part of 
+          Tamil Nadu, India.
+        </p>
+        <p>
+          This is a traditional craft and being done by the people of the villages. Korai mats are 
+          formed from natural fibre resource collected from korai grass which are amphibious grown 
+          locally for the purpose of manufacturing mat.
+        </p>
       </div>
     </div>
     <!-- /.row -->
