mat new image update

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ document.onclick = mclose;
 <td height="230">&nbsp;</td>
 </tr>
 <tr>
-<td><div id="fade" style=" margin:0 auto;"> <img src="images/mat-web-new.jpg" width="921" height="287">  <img src="images/banner1.png" width="921" height="287"> </div></td>
+<td><div id="fade" style=" margin:0 auto;"> <img src="images/mat-web-new.png" width="921" height="287">  <img src="images/banner1.png" width="921" height="287"> </div></td>
 </tr>
 </table>
   <br/>  <br/>
