--- a/contact.html
+++ b/contact.html
@@ -184,7 +184,7 @@ document.onclick = mclose;
       <!-- Map Column -->
       <div class="col-lg-8 mb-4">
         <!-- Embedded Google Map -->
-        <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe>
+        <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126197.8783469721!2d77.67213645189688!3d8.721555033496822!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0411625053c519%3A0xad791b361b359a4d!2sTirunelveli%2C+Tamil+Nadu!5e0!3m2!1sen!2sin!4v1562393228664!5m2!1sen!2sin"></iframe>
       </div>
       <!-- Contact Details Column -->
       <div class="col-lg-4 mb-4">
@@ -198,15 +198,17 @@ document.onclick = mclose;
           <br>INDIA
         </p>
         <p>
-          <abbr title="Phone">P</abbr>: +91 83001 32260
-          <abbr title="Phone">P</abbr>: +91 81898 49707
-          <abbr title="Phone">P</abbr>: +91 84389 59011         
-        </p>
+            <abbr title="Email">E</abbr>:
+            <a href="mailto:name@example.com">info@b3exports.com
+            </a>
+          </p>
         <p>
-          <abbr title="Email">E</abbr>:
-          <a href="mailto:name@example.com">info@b3exports.com
-          </a>
-        </p>
+          <abbr title="Phone">P</abbr>: +91 83001 32260 </p>
+          <p>
+          <abbr title="Phone">P</abbr>: +91 81898 49707  </p>
+          <p>
+          <abbr title="Phone">P</abbr>: +91 84389 59011
+        </p>        
         <p>
           <abbr title="Hours">H</abbr>: Monday - Friday: 9:00 AM to 6:00 PM
         </p>
@@ -216,7 +218,7 @@ document.onclick = mclose;
 
     <!-- Contact Form -->
     <!-- In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
-    <div class="row">
+    <!-- <div class="row">
       <div class="col-lg-8 mb-4">
         <h3>Send us a Message</h3>
         <form name="sentMessage" id="contactForm" novalidate>
@@ -247,11 +249,11 @@ document.onclick = mclose;
           </div>
           <div id="success"></div>
           <!-- For success/fail messages -->
-          <button type="submit" class="btn btn-primary" id="sendMessageButton">Send Message</button>
+          <!-- <button type="submit" class="btn btn-primary" id="sendMessageButton">Send Message</button>
         </form>
       </div>
 
-    </div>
+    </div> -->
     <!-- /.row -->
 
   </div>
