--- a/about.html
+++ b/about.html
@@ -180,7 +180,7 @@ document.onclick = mclose;
     <!-- /.row -->
 
     <!-- Team Members -->
-    <h2>Our Team</h2>
+    <!-- <h2>Our Team</h2>
 
     <div class="row">
       <div class="col-lg-4 mb-4">
@@ -222,11 +222,11 @@ document.onclick = mclose;
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- /.row -->
 
     <!-- Our Customers -->
-    <h2>Our Customers</h2>
+    <!-- <h2>Our Customers</h2>
     <div class="row">
       <div class="col-lg-2 col-sm-4 mb-4">
         <img class="img-fluid" src="http://placehold.it/500x300" alt="">
@@ -246,7 +246,7 @@ document.onclick = mclose;
       <div class="col-lg-2 col-sm-4 mb-4">
         <img class="img-fluid" src="http://placehold.it/500x300" alt="">
       </div>
-    </div>
+    </div> -->
     <!-- /.row -->
 
   </div>
