--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ document.onclick = mclose;
         <ul id="sddm">
           <li><a href="index.html" onmouseover="mopen('m1')" onmouseout="mclosetime()">Home</a></li>
           <li><a href="about.html" onmouseover="mopen('m2')" onmouseout="mclosetime()">About Us</a></li>
-          <li><a href="products.html" onmouseover="mopen('m3')" onmouseout="mclosetime()">Products</a>
+          <li><a href="mats.html" onmouseover="mopen('m3')" onmouseout="mclosetime()">Products</a>
             <div id="m3" onmouseover="mcancelclosetime()" onmouseout="mclosetime()"> <a href="mats.html">Mats</a> </div>
           </li>
           <li><a href="contact.html" onmouseover="mopen('m4')" onmouseout="mclosetime()">Contact Us</a> </li>
