index image text update

--- a/index.html
+++ b/index.html
@@ -188,54 +188,28 @@ document.onclick = mclose;
  <div class="row">
     <div class="col-lg-6">
       <h2>B3 Exports</h2>
-      <p>We B3 Exports from India are a big diverse exporting company of several handloom products. </p>
-      <p>Our products exported are one of the best available in the world. </p>
-      <p>As these items hail from the granary of South India, it is no wonder that we lead and blaze the trail in both quality and variety.</p>
+      <p>
+          An export company which exports goods produced in India are shipped to another country for 
+          future sale or trade. Exports are a essential component of a country’s economy, 
+          as the sale of such goods adds to the producing nation's gross output. 
+          B3 exports want to take part in the economic growth of our country.
+        </p>
+        <p>
+          We B3 Exports engaged in exporting Mats which made of a special kind of grass called 
+          "Korai". The Korai Mat weaving craft is a customary skill of the people in southern part of 
+          Tamil Nadu, India.
+        </p>
+        <p>
+          This is a traditional craft and being done by the people of the villages. Korai mats are 
+          formed from natural fibre resource collected from korai grass which are amphibious grown 
+          locally for the purpose of manufacturing mat.
+        </p>
     </div>
     <div class="col-lg-6">
-      <img class="img-fluid rounded" src="http://placehold.it/700x450" alt="">
+      <img class="img-fluid rounded" src="b3logo2.png" alt="">
     </div>
   </div>
   <br/>
-  <!-- /.row -->
-    <!-- Marketing Icons Section -->
-    <div class="row">
-      <div class="col-lg-4 mb-4">
-        <div class="card h-100">
-          <h4 class="card-header">Card Title</h4>
-          <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary">Learn More</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 mb-4">
-        <div class="card h-100">
-          <h4 class="card-header">Card Title</h4>
-          <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam perspiciatis natus commodi similique totam consectetur praesentium molestiae atque exercitationem ut consequuntur, sed eveniet, magni nostrum sint fuga.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary">Learn More</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 mb-4">
-        <div class="card h-100">
-          <h4 class="card-header">Card Title</h4>
-          <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary">Learn More</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- /.row -->
-
     <!-- Portfolio Section -->
     <h2>Portfolio Heading</h2>
 
