REmoved call to action and image text exchange

--- a/index.html
+++ b/index.html
@@ -187,6 +187,9 @@ document.onclick = mclose;
  <!-- Features Section -->
  <div class="row">
     <div class="col-lg-6">
+      <img class="img-fluid rounded" src="b3logo2.png" alt="">
+    </div>
+    <div class="col-lg-6">
       <h2>B3 Exports</h2>
       <p>
           An export company which exports goods produced in India are shipped to another country for 
@@ -205,9 +208,7 @@ document.onclick = mclose;
           locally for the purpose of manufacturing mat.
         </p>
     </div>
-    <div class="col-lg-6">
-      <img class="img-fluid rounded" src="b3logo2.png" alt="">
-    </div>
+   
   </div>
   <br/>
    
@@ -215,14 +216,14 @@ document.onclick = mclose;
     <hr>
 
     <!-- Call to Action Section -->
-    <div class="row mb-4">
+    <!--<!--<div class="row mb-4">
       <div class="col-md-8">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
       </div>
       <div class="col-md-4">
         <a class="btn btn-lg btn-secondary btn-block" href="#">Call to Action</a>
       </div>
-    </div>
+    </div> -->
 
   </div>
   <!-- /.container -->
