--- a/portfolio.html
+++ b/portfolio.html
@@ -113,7 +113,7 @@ document.onclick = mclose;
             <td>        
               <ul id="sddm">
                 <li><a href="index.html" onmouseover="mopen('m1')" onmouseout="mclosetime()">Home</a></li>
-                <li><a href="about.html" onmouseover="mopen('m2')" onmouseout="mclosetime()">About Us</a></li>
+                <li><a href="about.html" onmouseover="mopen('m2')" onmouseout="mclosetime()">Portfolio</a></li>
                 <li><a href="mats.html" onmouseover="mopen('m3')" onmouseout="mclosetime()">Products</a>
                   <div id="m3" onmouseover="mcancelclosetime()" onmouseout="mclosetime()"> <a href="mats.html">Mats</a> </div>
                 </li>
@@ -145,7 +145,7 @@ document.onclick = mclose;
     <div class="row">
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+          <a href="#"><img class="card-img-top" src="images/portfolio1.jpg" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="#">Project One</a>
@@ -156,7 +156,7 @@ document.onclick = mclose;
       </div>
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+          <a href="#"><img class="card-img-top" src="images/portfolio2.jpg" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="#">Project Two</a>
@@ -167,7 +167,7 @@ document.onclick = mclose;
       </div>
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+          <a href="#"><img class="card-img-top" src="images/portfolio3.jpg" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="#">Project Three</a>
@@ -178,7 +178,7 @@ document.onclick = mclose;
       </div>
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+          <a href="#"><img class="card-img-top" src="images/portfolio4.jpg" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="#">Project Four</a>
@@ -189,7 +189,7 @@ document.onclick = mclose;
       </div>
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+          <a href="#"><img class="card-img-top" src="images/portfolio5.jpg" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="#">Project Five</a>
@@ -200,7 +200,7 @@ document.onclick = mclose;
       </div>
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+          <a href="#"><img class="card-img-top" src="images/portfolio6.jpg" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="#">Project Six</a>
