--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ document.onclick = mclose;
       <td>        
         <ul id="sddm">
           <li><a href="index.html" onmouseover="mopen('m1')" onmouseout="mclosetime()">Home</a></li>
-          <li><a href="about.html" onmouseover="mopen('m2')" onmouseout="mclosetime()">Portfolio</a></li>
+          <li><a href="portfolio.html" onmouseover="mopen('m2')" onmouseout="mclosetime()">Portfolio</a></li>
           <li><a href="mats.html" onmouseover="mopen('m3')" onmouseout="mclosetime()">Products</a>
             <div id="m3" onmouseover="mcancelclosetime()" onmouseout="mclosetime()"> <a href="mats.html">Mats</a> </div>
           </li>
