Product page update

--- a/mats1.html
+++ b/mats1.html
@@ -157,11 +157,11 @@ document.onclick = mclose;
     <div class="row">
       <div class="col-md-7">
         <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="images/product/1.jpg" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="images/product/5.jpg" alt="">
         </a>
       </div>
       <div class="col-md-5">
-        <h3>Thread Mat</h3>
+        <h3>Color Box Design</h3>
         <p>3X6 Feet</p>
         <a class="btn btn-primary" href="#">View Project
           <span class="glyphicon glyphicon-chevron-right"></span>
@@ -176,11 +176,11 @@ document.onclick = mclose;
     <div class="row">
       <div class="col-md-7">
         <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="images/product/2.jpg" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="images/product/6.jpg" alt="">
         </a>
       </div>
       <div class="col-md-5">
-        <h3>Double Korai Mat</h3>
+        <h3>Designer Mat</h3>
         <p>4X6 Feet.</p>
         <a class="btn btn-primary" href="#">View Project
           <span class="glyphicon glyphicon-chevron-right"></span>
@@ -195,11 +195,11 @@ document.onclick = mclose;
     <div class="row">
       <div class="col-md-7">
         <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="images/product/3.jpg" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="images/product/7.jpg" alt="">
         </a>
       </div>
       <div class="col-md-5">
-        <h3>Nerve Mat</h3>
+        <h3>Square Box Design Mat</h3>
         <p>4X6 Feet</p>
         <a class="btn btn-primary" href="#">View Project
           <span class="glyphicon glyphicon-chevron-right"></span>
@@ -215,12 +215,12 @@ document.onclick = mclose;
 
       <div class="col-md-7">
         <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="images/product/4.jpg" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="images/product/8.jpg" alt="">
         </a>
       </div>
       <div class="col-md-5">
-        <h3>Thread Mat</h3>
-        <p>4X6 Feet</p>
+        <h3>Big Size</h3>
+        <p>Custom size</p>
         <a class="btn btn-primary" href="#">View Project
           <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
