--- a/mats2.html
+++ b/mats2.html
@@ -157,11 +157,11 @@ document.onclick = mclose;
     <div class="row">
       <div class="col-md-7">
         <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="images/product/1.jpg" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="images/product/9.jpg" alt="">
         </a>
       </div>
       <div class="col-md-5">
-        <h3>Thread Mat</h3>
+        <h3>Designer Mat</h3>
         <p>3X6 Feet</p>
         <a class="btn btn-primary" href="#">View Project
           <span class="glyphicon glyphicon-chevron-right"></span>
@@ -176,11 +176,11 @@ document.onclick = mclose;
     <div class="row">
       <div class="col-md-7">
         <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="images/product/2.jpg" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="images/product/10.jpg" alt="">
         </a>
       </div>
       <div class="col-md-5">
-        <h3>Double Korai Mat</h3>
+        <h3>Flower Design Mat</h3>
         <p>4X6 Feet.</p>
         <a class="btn btn-primary" href="#">View Project
           <span class="glyphicon glyphicon-chevron-right"></span>
@@ -195,12 +195,12 @@ document.onclick = mclose;
     <div class="row">
       <div class="col-md-7">
         <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="images/product/3.jpg" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="images/product/11.jpg" alt="">
         </a>
       </div>
       <div class="col-md-5">
-        <h3>Nerve Mat</h3>
-        <p>4X6 Feet</p>
+        <h3>Flower Design Mat</h3>
+        <p>3X6 Feet</p>
         <a class="btn btn-primary" href="#">View Project
           <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
@@ -215,11 +215,11 @@ document.onclick = mclose;
 
       <div class="col-md-7">
         <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="images/product/4.jpg" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="images/product/12.jpg" alt="">
         </a>
       </div>
       <div class="col-md-5">
-        <h3>Thread Mat</h3>
+        <h3>Korai Machine</h3>
         <p>4X6 Feet</p>
         <a class="btn btn-primary" href="#">View Project
           <span class="glyphicon glyphicon-chevron-right"></span>
