--- a/contact.html
+++ b/contact.html
@@ -133,15 +133,15 @@ document.onclick = mclose;
       </div>
     </div>
   </nav> -->
-  <table align="center" width="1000">
+  <table align="center" width="920">
       <tr> <td class="menubg">
-        <table width="1000" border="0" cellspacing="0" cellpadding="0">
+        <table width="920" border="0" cellspacing="0" cellpadding="0">
           <tr>
             <td class="logo" width="279"><a href="index.html"><img src="images/b3logo.png"  alt="" width="279" height="78" border="0" title=""/></a></td>
             <td>        
               <ul id="sddm">
                 <li><a href="index.html" onmouseover="mopen('m1')" onmouseout="mclosetime()">Home</a></li>
-                <li><a href="about.html" onmouseover="mopen('m2')" onmouseout="mclosetime()">About Us</a></li>
+                <li><a href="portfolio.html" onmouseover="mopen('m2')" onmouseout="mclosetime()">Portfolio</a></li>
                 <li><a href="mats.html" onmouseover="mopen('m3')" onmouseout="mclosetime()">Products</a>
                   <div id="m3" onmouseover="mcancelclosetime()" onmouseout="mclosetime()"> <a href="mats.html">Mats</a> </div>
                 </li>
